Added new aspect ratio parameter to API's

--- a/sdk/c#/PicarioXPO.RenderAPI.V2/PicarioXPO.RenderAPI.V2.csproj
+++ b/sdk/c#/PicarioXPO.RenderAPI.V2/PicarioXPO.RenderAPI.V2.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DesignKeyExtractors\ContrastDesignKey.cs" />
     <Compile Include="DesignKeyExtractors\DesignKey.cs" />
     <Compile Include="DesignKeyExtractors\FlipDesignKey.cs" />
+    <Compile Include="DesignKeyExtractors\AspectRatioDesignKey.cs" />
     <Compile Include="OverlayKeyExtractors\LocationOverlayKey.cs" />
     <Compile Include="OverlayKeyExtractors\OperationOverlayKey.cs" />
     <Compile Include="OverlayKeyExtractors\TimeOverlayKey.cs" />
