--- a/sdk/js/PicarioXPO.RenderAPI.V2/PicarioXPO.RenderAPI.V2.csproj
+++ b/sdk/js/PicarioXPO.RenderAPI.V2/PicarioXPO.RenderAPI.V2.csproj
@@ -20,7 +20,10 @@
   <ItemGroup>
     <TypeScriptCompile Include="PicarioXPO.RenderAPI.V2.ts" />
     <TypeScriptCompile Include="Collections\Collections.ts" />
+    <TypeScriptCompile Include="Scripts\PicarioXPO.RenderAPI.V2.d.ts" />
+    <TypeScriptCompile Include="Scripts\Pix2.d.ts" />
     <TypeScriptCompile Include="UrlGenerators\FluentXpoUrlOverlay.ts" />
+    <TypeScriptCompile Include="UrlGenerators\IXpoCanvasGenerator.ts" />
     <TypeScriptCompile Include="UrlGenerators\XpoUrlOverlay.ts" />
     <TypeScriptCompile Include="XpoUrlGenerator\ColorKeys.ts" />
     <TypeScriptCompile Include="XpoUrlGenerator\DesignKey.ts" />
@@ -69,6 +72,13 @@
     <TypeScriptCompile Include="UrlGenerators\XpoUrlText.ts" />
     <TypeScriptCompile Include="UrlGenerators\XpoUrlTextDecoration.ts" />
     <TypeScriptCompile Include="UrlGenerators\UrlGeneratorHelpers.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\PicarioXPO.RenderAPI.V2.js" />
+    <Content Include="Scripts\Pix2.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
