Added text keys to C# wrapper

--- a/sdk/c#/PicarioXPO.RenderAPI.V2/PicarioXPO.RenderAPI.V2.csproj
+++ b/sdk/c#/PicarioXPO.RenderAPI.V2/PicarioXPO.RenderAPI.V2.csproj
@@ -51,6 +51,18 @@
     <Compile Include="OverlayKeyExtractors\ModeOverlayKey.cs" />
     <Compile Include="OverlayKeyExtractors\NameOverlayKey.cs" />
     <Compile Include="OverlayKeyExtractors\OverlayKey.cs" />
+    <Compile Include="TextKeyExtractors\TextColorTextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextFontStyle.cs" />
+    <Compile Include="TextKeyExtractors\TextFontTextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextMultiplierTextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextPlacingPointXTextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextPlacingPointYTextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextSizeTextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextAlignmentTextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextStyleTextKey.cs" />
+    <Compile Include="TextKeyExtractors\TextTextKey.cs" />
+    <Compile Include="TextKeys.cs" />
     <Compile Include="UrlKey.cs" />
     <Compile Include="DesignKeyExtractors\DropXDesignKey.cs" />
     <Compile Include="DesignKeyExtractors\DropYDesignKey.cs" />
