--- a/examples/csharp/packages.config
+++ b/examples/csharp/packages.config
@@ -23,6 +23,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
-  <package id="PicarioXPO.RenderAPI.NET.V2" version="1.3.0.37" targetFramework="net45" />
+  <package id="PicarioXPO.RenderAPI.NET.V2" version="1.7.0.71-beta" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
