--- a/examples/csharp/XpoRenderApiNetDemo.csproj
+++ b/examples/csharp/XpoRenderApiNetDemo.csproj
@@ -48,9 +48,9 @@
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.5.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="PicarioXPO.RenderAPI.V2, Version=1.7.0.71, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PicarioXPO.RenderAPI.V2, Version=1.7.0.74, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\PicarioXPO.RenderAPI.NET.V2.1.7.0.71-beta\lib\PicarioXPO.RenderAPI.V2.dll</HintPath>
+      <HintPath>packages\PicarioXPO.RenderAPI.NET.V2.1.7.0.74\lib\PicarioXPO.RenderAPI.V2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
