Added RenderMode to URL SDK's

--- a/sdk/c#/PicarioXPO.RenderAPI/PicarioXPO.RenderAPI.csproj
+++ b/sdk/c#/PicarioXPO.RenderAPI/PicarioXPO.RenderAPI.csproj
@@ -57,6 +57,7 @@
     <Compile Include="XpoImageUrlRequest.cs" />
     <Compile Include="XpoUrlColor.cs" />
     <Compile Include="XpoUrlFileTypes.cs" />
+    <Compile Include="XpoUrlRenderModes.cs" />
     <Compile Include="XpoUrlImageTypes.cs" />
     <Compile Include="XpoUrlOverlayLocation.cs" />
     <Compile Include="XpoUrlOverlayOperations.cs" />
