--- a/sdk/js/PicarioXPO.RenderAPI.V2/PicarioXPO.RenderAPI.V2.csproj
+++ b/sdk/js/PicarioXPO.RenderAPI.V2/PicarioXPO.RenderAPI.V2.csproj
@@ -16,6 +16,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <ItemGroup>
     <TypeScriptCompile Include="PicarioXPO.RenderAPI.V2.ts" />
